fix dropdown overlap on small windows, further improve custom graph and remove dead code

--- a/static/index.css
+++ b/static/index.css
@@ -151,6 +151,7 @@ hr {
   margin-top: 0;
   color: #333;
   font-family: Tahoma, Arial, sans-serif;
+  line-height: 1.5em;
 }
 
 .custom-graph-form .close {
